...
    <string name="last_initial">Last Initial</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="an_avatar">An Avatar</string>
    <string name="quiz_of_quizzes">%1$s / %2$s</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="category">Category</string>
    <string name="sign_out">Reset points</string>
    <string name="x_points">%1$d pts</string>
    <string name="back">back</string>

    <!--JVG.S-->
...
